<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_reg_nik"
                style="@style/modifiedEditText"
                android:hint="NIK"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_reg_name"
                style="@style/modifiedEditText"
                android:hint="Nama"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_reg_username"
                style="@style/modifiedEditText"
                android:backgroundTint="#F44336"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_reg_password"
                style="@style/modifiedEditText"
                android:backgroundTint="#F44336"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_reg_telp"
                style="@style/modifiedEditText"
                android:hint="Telp"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="DAFTAR" />

        <TextView
            android:id="@+id/btn_login_vf"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
