<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="MASUK" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUsername"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                style="@style/modifiedEditText"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="MASUK" />

        <TextView
            android:id="@+id/btn_register_vf"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_masukpetugas_vf"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Masuk sebagai Petugas"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
